--- a/src/main/front/public/index.html
+++ b/src/main/front/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,6 +30,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
