--- a/src/main/front/public/index.html
+++ b/src/main/front/public/index.html
@@ -30,10 +30,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+    <!-- <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42"></script>
-    <!--
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42"></script> -->
+    
+      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42&libraries=services,clusterer,drawing"></script>
+      <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
