MapSearch.js추가, 카카오맵  react install

--- a/src/main/front/public/index.html
+++ b/src/main/front/public/index.html
@@ -34,7 +34,8 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42"></script> -->
     
-      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42&libraries=services,clusterer,drawing"></script>
+      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42&libraries=services,clusterer,drawing"></script> -->
+      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=358919dc3502ab7fdba075cc38da6e42&libraries=services"></script>
       <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
